@@ -30,6 +30,8 @@ Included
 - `.deb` now parses deterministic AR entry metadata (bounded, no extraction/exec).
 - `.rpm` now captures deterministic lead/header/script/signing hint counters from local bytes only.
 - `.appimage` now captures deterministic ELF/runtime header hints (analysis-only; execution withheld).
+- Package strict route now requires minimum structural byte-size evidence for `.nupkg` and `.jar` beyond manifest-only ZIP structure, preventing tiny synthetic placeholders from passing explicit package routing.
+- Package strict route now requires `.whl` explicit structure evidence (`METADATA`, `WHEEL`, and `RECORD` in `.dist-info`), preventing partial wheel metadata placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.msix` beyond manifest-only ZIP structure, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.deb` beyond required AR entry names, preventing tiny synthetic placeholders from passing explicit package routing.
 - Package strict route now requires minimum structural byte-size evidence for `.exe` beyond valid PE header bytes, preventing tiny synthetic placeholders from passing explicit package routing.
